<resources>
    <string name="app_name">MyStories App</string>
    <string name="new_story_title">New Story</string>
    <string name="detail_title">Story</string>
    <string name="favorite_title">Favorite Stories</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="stories_title">People Stories</string>
    <string name="greeting">Hi, %s</string>
    <string name="name_hint">Name</string>
    <string name="email_hint">Email</string>
    <string name="password_hint">Password</string>
    <string name="submit">Submit</string>
    <string name="not_have_account_yet">Not have account yet?</string>
    <string name="app_exit_warn">Press Back again to exit the app</string>
    <string name="error_digit_password">The password must have at least 6 characters</string>
    <string name="success_login_message">Login Success</string>
    <string name="failure_login_message">Login failed. Please check your email and password</string>
    <string name="failure_get_list_stories">Unfortunately, Error to get Stories :(</string>
    <string name="error_register_message">Failed to register, please register again!</string>
    <string name="success_register_message">Register is success, lets Login!</string>
    <string name="opening">What\'s the story you\'d like to tell today?</string>
    <string name="title_story_dummy">Title</string>
    <string name="date_story_dummy">12/10/2023</string>
    <string name="description_story_dummy">lorem ipsum dolor aowkaowkd awaawokdaw aowdk awokdawd awodkaw daowkdao dawd awd kawodkawd</string>
    <string name="label_gallery">Gallery</string>
    <string name="use_location">Use Location</string>
    <string name="input_description_label">Description</string>
    <string name="permission_request_granted">Permission request granted</string>
    <string name="permission_request_danied">Permission request danied</string>
    <string name="empty_image_onsubmit">Please choose one image on gallery or capture a photo</string>
    <string name="empty_description_onsubmit">Please fill the description field</string>
    <string name="success_create_story">Story created successfully</string>
    <string name="failure_create_story">Story created failed</string>
    <string name="label_language">Language</string>
    <string name="label_night_mode">Night Mode</string>
    <string name="label_logout">Log out</string>
    <string name="active">Active</string>
    <string name="non_active">Non-Active</string>
    <string name="settings_title">Settings</string>
    <string name="settings_theme_title">Dark Mode Settings</string>
    <string name="favorite_is_empty">Not have favorite stories yet!</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="app_widget_description">This is an app widget description</string>
    <string name="logout_confirmation">Are you sure you want to log out of your account?</string>
    <string name="yes">Yes</string>
    <string name="cancel">Cancel</string>
    <string name="email_already_taken">Email is already taken</string>
    <string name="cant_find_location">Can\'t find location</string>
    <string name="title_activity_stories_maps" translatable="false">StoriesMapsActivity</string>
    <string name="normal_type" translatable="false">Normal</string>
    <string name="satellite_type" translatable="false">Satellite</string>
    <string name="terrain_type" translatable="false">Terrain</string>
    <string name="hybrid_type" translatable="false">Hybrid</string>
    <string name="retry">Retry</string>
    <string name="detail">Detail</string>
    <string name="share_subject">Share Story</string>
    <string name="share_description" translatable="false">Hi, lets see this story!\n%s</string>
</resources>