<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/container"
    android:padding="16dp"
    tools:context=".view.auth.LoginFragment">

    <TextView
        android:id="@+id/title_auth"
        style="@style/FragmentLabel"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textSize="24sp"
        android:text="@string/login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/email_input_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        app:boxCornerRadiusBottomEnd="8dp"
        app:boxCornerRadiusBottomStart="8dp"
        app:boxCornerRadiusTopEnd="8dp"
        app:boxCornerRadiusTopStart="8dp"
        app:layout_constraintEnd_toEndOf="@+id/title_auth"
        app:layout_constraintStart_toStartOf="@+id/title_auth"
        app:layout_constraintTop_toBottomOf="@+id/title_auth">

        <com.pangidoannsh.mystories.customview.TextInput
            android:id="@+id/email_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email_hint"
            android:inputType="textEmailAddress"
            android:paddingVertical="8dp" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/etPasswordLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:boxCornerRadiusBottomEnd="8dp"
        app:boxCornerRadiusBottomStart="8dp"
        app:boxCornerRadiusTopEnd="8dp"
        app:boxCornerRadiusTopStart="8dp"
        app:layout_constraintEnd_toEndOf="@+id/title_auth"
        app:layout_constraintStart_toStartOf="@+id/title_auth"
        app:layout_constraintTop_toBottomOf="@+id/email_input_container"
        app:passwordToggleDrawable="@drawable/password_selector"
        app:passwordToggleEnabled="true">

        <com.pangidoannsh.mystories.customview.PasswordInput
            android:id="@+id/password_input"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/password_hint"
            android:inputType="textPassword"
            android:paddingVertical="0dp" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.pangidoannsh.mystories.customview.MyButton
        android:id="@+id/btn_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/login"
        android:textAllCaps="false"
        app:layout_constraintEnd_toEndOf="@+id/etPasswordLayout"
        app:layout_constraintStart_toStartOf="@+id/etPasswordLayout"
        app:layout_constraintTop_toBottomOf="@+id/etPasswordLayout" />

    <TextView
        android:id="@+id/not_have_account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/poppins_light"
        android:text="@string/not_have_account_yet"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="@+id/btn_login"
        app:layout_constraintTop_toBottomOf="@+id/btn_login" />

    <TextView
        android:id="@+id/btn_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/register"
        android:textColor="@color/primary"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="@+id/not_have_account"
        app:layout_constraintStart_toEndOf="@+id/not_have_account"
        app:layout_constraintTop_toTopOf="@+id/not_have_account" />

</androidx.constraintlayout.widget.ConstraintLayout>