<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".view.story.detailstory.DetailStoryActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="@color/actionbar"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:title="@string/detail_title"
        app:titleTextAppearance="@style/ToolbarTitleText" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/image_story"
                android:layout_width="match_parent"
                android:layout_height="500dp"
                android:scaleType="fitCenter"
                android:transitionName="image"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:srcCompat="@tools:sample/backgrounds/scenic" />

            <TextView
                android:id="@+id/story_creator"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/poppins_medium"
                android:text="@string/title_story_dummy"
                android:textSize="14sp"
                android:transitionName="name"
                app:layout_constraintStart_toStartOf="@+id/btn_favorite"
                app:layout_constraintTop_toBottomOf="@+id/btn_favorite" />

            <TextView
                android:id="@+id/description"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="16dp"
                android:fontFamily="@font/poppins_light"
                android:paddingBottom="24dp"
                android:text="@string/description_story_dummy"
                android:textColor="@color/text"
                android:textSize="14sp"
                android:transitionName="description"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/story_creator"
                app:layout_constraintTop_toTopOf="@+id/story_creator" />

            <ImageButton
                android:id="@+id/btn_favorite"
                android:layout_width="28dp"
                android:layout_height="28dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:background="@android:color/transparent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/image_story"
                app:srcCompat="@drawable/ic_favorite_rounded" />

            <ImageButton
                android:id="@+id/btn_share"
                android:layout_width="28dp"
                android:layout_height="28dp"
                android:layout_marginStart="16dp"
                android:background="@android:color/transparent"
                app:layout_constraintBottom_toBottomOf="@+id/btn_favorite"
                app:layout_constraintStart_toEndOf="@+id/btn_favorite"
                app:layout_constraintTop_toTopOf="@+id/btn_favorite"
                app:srcCompat="@drawable/ic_share" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</LinearLayout>
