<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".view.settings.SettingsActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/btn_language"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:gravity="top">

        <ImageView
            android:id="@+id/ic_language"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:src="@drawable/ic_language" />

        <TextView
            android:id="@+id/language_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/label_language"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="@+id/ic_language"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/ic_language"
            app:layout_constraintTop_toTopOf="@+id/ic_language" />

        <TextView
            android:id="@+id/language_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="English"
            android:textColor="@color/gray500"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="@+id/language_label"
            app:layout_constraintStart_toEndOf="@+id/language_label" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/btn_night_mode"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="top">

        <ImageView
            android:id="@+id/ic_night_mode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:src="@drawable/ic_night_mode" />

        <TextView
            android:id="@+id/night_mode_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/label_night_mode"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="@+id/ic_night_mode"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/ic_night_mode"
            app:layout_constraintTop_toTopOf="@+id/ic_night_mode" />

        <TextView
            android:id="@+id/night_mode_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="Active"
            android:textColor="@color/gray500"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="@+id/night_mode_label"
            app:layout_constraintStart_toEndOf="@+id/night_mode_label" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/btn_logout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="top">

        <ImageView
            android:id="@+id/ic_logout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:src="@drawable/ic_logout" />

        <TextView
            android:textColor="#DC2C2C"
            android:id="@+id/logout_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/label_logout"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="@+id/ic_logout"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/ic_logout"
            app:layout_constraintTop_toTopOf="@+id/ic_logout" />
    </androidx.constraintlayout.widget.ConstraintLayout>


</LinearLayout>